--- a/tensquare_qa/pom.xml
+++ b/tensquare_qa/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tensquare_base</artifactId>
+    <artifactId>tensquare_qa</artifactId>
 
     <dependencies>
         <dependency>
@@ -24,10 +24,6 @@
             <groupId>com.tensquare</groupId>
             <artifactId>tensquare_common</artifactId>
             <version>4.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 
