--- a/tensquare_recruit/pom.xml
+++ b/tensquare_recruit/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tensquare_base</artifactId>
-
+    <artifactId>tensquare_recruit</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -25,10 +24,7 @@
             <artifactId>tensquare_common</artifactId>
             <version>4.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
     </dependencies>
+
 
 </project>
