--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>tensquare_qa</module>
         <module>tensquare_article</module>
         <module>tensquare_gathering</module>
+        <module>mongodb_demo</module>
+        <module>tensquare_spit</module>
     </modules>
 
     <parent>
