--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>rabbitmq_listener</module>
         <module>tensquare_user</module>
         <module>jwt_demo</module>
+        <module>tensquare_eureka</module>
     </modules>
 
     <parent>
@@ -50,6 +51,24 @@
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.M9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.0.1.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <repositories>
         <repository>
             <id>spring‐snapshots</id>
