--- a/tensquare_search/pom.xml
+++ b/tensquare_search/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>tensquare_common</artifactId>
             <version>4.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
 
